--- a/src/assets/Style/_Header.scss
+++ b/src/assets/Style/_Header.scss
@@ -1,7 +1,15 @@
 header {
-  h1 {
-    @include title($color2);
-    margin: 10px auto;
+  .logo {
+    border: 1px solid $color2;
+    padding: 10px;
+    margin: 15px auto;
+    border-radius: 15px;
+    width: 30%;
+    @include justify(space-evenly);
+
+    h1 {
+      @include title($color2);
+    }
   }
 
   nav {
