--- a/src/assets/Style/_ProductShop.scss
+++ b/src/assets/Style/_ProductShop.scss
@@ -6,7 +6,7 @@
 
   .product-card {
     flex: 1 0 25%;
-    border: solid 1px $color2;
+    border: solid 1px $light-100;
     border-radius: 15px;
     padding: 10px;
     margin: 5px;
