--- a/src/assets/Style/_ShoppingCart.scss
+++ b/src/assets/Style/_ShoppingCart.scss
@@ -9,7 +9,7 @@
     margin: 10px auto;
     padding: 10px;
     border-radius: 15px;
-    border: 1px solid $color2;
+    border: 1px solid $light-100;
 
     img {
       height: 150px;
