--- a/src/assets/Style/Components/_Navigation.scss
+++ b/src/assets/Style/Components/_Navigation.scss
@@ -10,6 +10,9 @@
   @media screen and (max-width: 1000px) {
     grid-template-columns: 50% 50%;
   }
+  @media screen and (max-width: 600px) {
+    width: 100%;
+  }
 
   ul {
     @include justify(space-around);
@@ -18,9 +21,6 @@
       display: none;
     }
 
-    input[type="text"]::placeholder {
-      color: $light-100;
-    }
     span {
       margin-left: 5px;
     }
