--- a/src/assets/Style/Components/_Sidebar.scss
+++ b/src/assets/Style/Components/_Sidebar.scss
@@ -1,7 +1,26 @@
 .sidebar{
-  // position: absolute;
-  // top: ;
-  // left: ;
-  @include justify(space-around);
-  flex-direction: column;
+  position: absolute;
+  top: 80px;
+  left: -300px;
+  width: 300px;
+  border-radius:  0px 15px 15px 0px;
+  display: none;
+
+  @media screen and (max-width: 1000px) {
+    display: block
+  }
+  
+  .sidebar-nav{
+
+    ul{
+      height: 350px;
+      @include justify(space-evenly);
+      flex-direction: column;
+
+      input[type="radio"] {
+        margin: 10px;
+        cursor: pointer;
+      }
+    }
+  }
 }
