--- a/src/assets/Style/Layouts/_ProductDisplay.scss
+++ b/src/assets/Style/Layouts/_ProductDisplay.scss
@@ -1,15 +1,50 @@
-.product-details {
-  margin: 25px auto;
-  width: 90%;
-  display: grid;
-  grid-template-columns: 30% 70%;
-
-  img {
-    border-radius: 15px;
-    width: 100%;
+.product-infos{
+  position: relative;
+  
+  span{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    height: 50px;
+    width: 50px;
   }
-  .specs {
-    @include justify(space-around);
-    flex-direction: column;
+  .product-details {
+    margin: 25px auto;
+    width: 90%;
+    display: grid;
+    grid-template-columns: 45% 55%;
+
+    @media screen and (max-width: 750px) {
+      grid-template-columns: 1fr;
+      grid-template-rows: 50% 50%;
+    }
+    
+    img {
+      border-radius: 15px;
+      width: 100%;
+
+      @media screen and (max-width: 750px) {
+        width: 25%;
+        place-self: center;
+      }
+    }
+    .specs {
+      @include justify(space-around);
+      flex-direction: column;
+      margin: 15px;
+
+      p{
+        margin: 10px;
+      }
+      
+      ul{
+        margin: 10px;
+
+        p{
+          margin: 10px;
+        }
+      }
+    }
   }
 }
+
