--- a/src/assets/Style/Layouts/_ProductShop.scss
+++ b/src/assets/Style/Layouts/_ProductShop.scss
@@ -4,17 +4,27 @@
   margin: 25px auto;
   width: 90%;
 
-  .product-card {
+  .product-card-light,
+  .product-card-dark {
     flex: 1 0 25%;
-    border: solid 1px $light-100;
     border-radius: 15px;
-    padding: 10px;
-    margin: 5px;
+    padding: 15px;
+    margin: 10px;
 
     img {
       height: 200px;
       width: 200px;
       border-radius: 15px;
+      margin: 10px auto;
     }
+    p{
+      margin: 10px auto;
+    }
+  }
+  .product-card-dark{
+    border: solid 1px $light-100;
+  }
+  .product-card-light{
+    border: solid 1px $dark-900;
   }
 }
