--- a/src/assets/Style/_settings.scss
+++ b/src/assets/Style/_settings.scss
@@ -15,7 +15,7 @@ $dark-400: rgb(59, 59, 59);
 $light-300: rgb(255, 239, 213);
 $light-100: rgb(243, 243, 243);
 $dark-blue: rgb(15, 15, 226);
-$light-blue: rgb(15, 113, 240);
+$light-blue: rgb(0, 114, 254);
 
 @mixin justify($content) {
   display: flex;
@@ -122,15 +122,31 @@ body {
   font-size: 16px;
   padding: 10px;
   background: none;
+  letter-spacing: 1px;
 }
 
 .input-light {
   border: 1px solid $dark-900;
   color: $dark-900;
+
+  &::placeholder{
+    color: $dark-900;
+  }
 }
 .input-dark {
   border: 1px solid $light-100;
   color: $light-100;
+
+  &::placeholder{
+    color: $light-100;
+  }
+}
+
+.hr-light{
+  border: solid 1px $dark-900;
+}
+.hr-dark{
+  border: solid 1px $light-100;
 }
 
 .light {
