--- a/src/assets/Style/index.scss
+++ b/src/assets/Style/index.scss
@@ -3,6 +3,7 @@
 @import "./Layouts/ProductShop";
 @import "./Layouts/ProductDisplay";
 @import "./Layouts/ShoppingCart";
+@import "./Layouts/Footer";
 @import "./Components/Hambuger-Menu";
 @import "./Components/Navigation";
 @import "./Components/Sidebar";
