--- a/src/assets/Style/_settings.scss
+++ b/src/assets/Style/_settings.scss
@@ -55,7 +55,7 @@ body {
 }
 
 .btn-dark,
-.btn-light{
+.btn-light {
   padding: 15px 10px;
   border-radius: 10px;
   border: none;
@@ -92,7 +92,7 @@ body {
 }
 
 .span-dark,
-.span-light{
+.span-light {
   background: none;
   border-radius: 10px;
   @include justify(center);
@@ -109,7 +109,6 @@ body {
 .span-light {
   color: $dark-900;
   border: 1px solid $dark-900;
-
 }
 .span-dark {
   color: $light-100;
@@ -117,7 +116,7 @@ body {
 }
 
 .input-dark,
-.input-light{
+.input-light {
   border-radius: 15px;
   font-size: 16px;
   padding: 10px;
@@ -129,7 +128,7 @@ body {
   border: 1px solid $dark-900;
   color: $dark-900;
 
-  &::placeholder{
+  &::placeholder {
     color: $dark-900;
   }
 }
@@ -137,15 +136,15 @@ body {
   border: 1px solid $light-100;
   color: $light-100;
 
-  &::placeholder{
+  &::placeholder {
     color: $light-100;
   }
 }
 
-.hr-light{
+.hr-light {
   border: solid 1px $dark-900;
 }
-.hr-dark{
+.hr-dark {
   border: solid 1px $light-100;
 }
 
@@ -158,3 +157,44 @@ body {
   color: $light-100;
 }
 
+.cartRow-dark,
+.cartRow-light {
+  @include justify(space-around);
+  width: 90%;
+  margin: 10px auto;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.cartRow-dark {
+  border: 1px solid $light-100;
+}
+.cartRow-light {
+  border: 1px solid $dark-900;
+}
+
+.link-dark,
+.link-dark:visited {
+  color: $light-100;
+}
+.link-light,
+.link-light:visited {
+  color: $dark-900;
+}
+
+.select-light,
+.select-dark {
+  padding: 5px;
+  margin-left: 5px;
+  border-radius: 15px;
+  background: none;
+  font-size: 14px;
+}
+.select-dark {
+  color: $light-100;
+  border: solid $light-100 1px;
+}
+.select-light {
+  color: $dark-900;
+  border: solid $dark-900 1px;
+}
