--- a/src/assets/Style/index.scss
+++ b/src/assets/Style/index.scss
@@ -1,4 +1,5 @@
 @import "./settings";
+@import "./classes";
 @import "./Layouts/Header";
 @import "./Layouts/ProductShop";
 @import "./Layouts/ProductDisplay";
@@ -7,4 +8,8 @@
 @import "./Components/Hambuger-Menu";
 @import "./Components/Navigation";
 @import "./Components/Sidebar";
+@import "./Components/btn";
+@import "./Components/span";
+@import "./Components/logo";
+@import "./Components/input";
 
