--- a/src/assets/Style/Components/_Navigation.scss
+++ b/src/assets/Style/Components/_Navigation.scss
@@ -1,4 +1,5 @@
-.navigation {
+.navigation-light,
+.navigation-dark {
   padding: 10px;
   margin: 0 auto;
   width: 80%;
@@ -7,17 +8,15 @@
   grid-template-columns: 80% 10% 10%;
   align-items: center;
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 1200px) {
     grid-template-columns: 50% 50%;
-  }
-  @media screen and (max-width: 600px) {
     width: 100%;
   }
 
   ul {
     @include justify(space-around);
 
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: 1200px) {
       display: none;
     }
 
@@ -34,8 +33,21 @@
     }
   }
   .span-dark,
-  .span-light{
+  .span-light {
     width: 50px;
     margin: 0 auto;
   }
+  option {
+    color: $dark-900;
+  }
+}
+.navigation-dark {
+  background: $dark-blue;
+  border: 1px solid $light-100;
+  box-shadow: 1px 2px 5px 2px rgba(243, 243, 243, 0.4);
+}
+.navigation-light {
+  background: $light-blue;
+  border: 1px solid $dark-900;
+  box-shadow: 1px 2px 5px 2px rgba(9, 9, 9, 0.4);
 }
