--- a/src/assets/Style/Layouts/_ProductShop.scss
+++ b/src/assets/Style/Layouts/_ProductShop.scss
@@ -17,14 +17,16 @@
       border-radius: 15px;
       margin: 10px auto;
     }
-    p{
+    p {
       margin: 10px auto;
     }
   }
-  .product-card-dark{
+  .product-card-dark {
     border: solid 1px $light-100;
+    box-shadow: 1px 2px 5px 2px rgba(243, 243, 243, 0.4);
   }
-  .product-card-light{
+  .product-card-light {
     border: solid 1px $dark-900;
+    box-shadow: 1px 2px 5px 2px rgba(9, 9, 9, 0.4);
   }
 }
