--- a/src/assets/Style/_classes.scss
+++ b/src/assets/Style/_classes.scss
@@ -9,9 +9,11 @@
 
 .hr-light {
   border: solid 1px $dark-900;
+  box-shadow: 1px 2px 5px 2px rgba(9, 9, 9, 0.4);
 }
 .hr-dark {
   border: solid 1px $light-100;
+  box-shadow: 1px 2px 5px 2px rgba(243, 243, 243, 0.4);
 }
 
 .light {
@@ -21,22 +23,6 @@
 .dark {
   background: $dark-400;
   color: $light-100;
-}
-
-.cartRow-dark,
-.cartRow-light {
-  @include justify(space-around);
-  width: 90%;
-  margin: 10px auto;
-  padding: 10px;
-  border-radius: 15px;
-}
-
-.cartRow-dark {
-  border: 1px solid $light-100;
-}
-.cartRow-light {
-  border: 1px solid $dark-900;
 }
 
 .link-dark,
