--- a/src/assets/Style/index.scss
+++ b/src/assets/Style/index.scss
@@ -1,5 +1,4 @@
 @import "./settings";
-@import "./classes";
 @import "./Layouts/Header";
 @import "./Layouts/ProductShop";
 @import "./Layouts/ProductDisplay";
@@ -12,4 +11,7 @@
 @import "./Components/span";
 @import "./Components/logo";
 @import "./Components/input";
-
+@import "./Components/select";
+@import "./Components/cartRow";
+@import "./Components/topBtn";
+@import "./Components/productDetails";
