--- a/src/assets/Style/Components/_Sidebar.scss
+++ b/src/assets/Style/Components/_Sidebar.scss
@@ -1,11 +1,13 @@
-.sidebar {
+.sidebar-light,
+.sidebar-dark {
   position: absolute;
   top: 80px;
-  left: -300px;
+  left: -310px;
   width: 300px;
   border-radius: 0px 15px 15px 0px;
   display: none;
   transition: 0.2s ease;
+  z-index: 5;
 
   @media screen and (max-width: 1200px) {
     display: block;
@@ -23,4 +25,18 @@
       }
     }
   }
+}
+.sidebar-dark {
+  background: $dark-blue;
+  border-top: 1px solid $light-100;
+  border-right: 1px solid $light-100;
+  border-bottom: 1px solid $light-100;
+  box-shadow: 1px 2px 5px 2px rgba(243, 243, 243, 0.4);
+}
+.sidebar-light {
+  background: $light-blue;
+  border-top: 1px solid $dark-900;
+  border-right: 1px solid $dark-900;
+  border-bottom: 1px solid $dark-900;
+  box-shadow: 1px 2px 5px 2px rgba(9, 9, 9, 0.4);
 }
