--- a/src/assets/Style/Components/_logo.scss
+++ b/src/assets/Style/Components/_logo.scss
@@ -10,6 +10,9 @@
   @media screen and (max-width: 450px) {
     width: 100%;
   }
+  h1 {
+    @include title;
+  }
   span {
     @include justify(center);
     font-size: 2rem;
