--- a/src/assets/Style/Layouts/_ProductDisplay.scss
+++ b/src/assets/Style/Layouts/_ProductDisplay.scss
@@ -1,94 +1,11 @@
 .product-infos {
   position: relative;
-
+  //Close BTN
   span {
     position: absolute;
     top: 15px;
     right: 15px;
     height: 50px;
     width: 50px;
-  }
-  .product-details {
-    margin: 25px auto;
-    width: 90%;
-    display: grid;
-    grid-template-columns: 45% 55%;
-
-    @media screen and (max-width: 750px) {
-      grid-template-columns: 1fr;
-      grid-template-rows: 50% 50%;
-    }
-
-    img {
-      border-radius: 15px;
-      width: 100%;
-
-      @media screen and (max-width: 750px) {
-        width: 25%;
-        place-self: center;
-      }
-    }
-    .specs {
-      @include justify(space-between);
-      flex-direction: column;
-      margin: 15px;
-      position: relative;
-
-      .wideSpecs {
-        @media screen and (max-width: 750px) {
-          display: none;
-        }
-      }
-
-      .tinySpecs-light,
-      .tinySpecs-dark {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 15px;
-        border-radius: 15px;
-        transition: 0.2s ease;
-        opacity: 0;
-        display: none;
-
-        span {
-          position: absolute;
-          top: 0;
-          right: -60px;
-        }
-      }
-
-      .tinySpecs-dark {
-        background: $dark-400;
-        border: 1px solid $light-100;
-        box-shadow: 1px 2px 5px 2px rgba(243, 243, 243, 0.4);
-      }
-      .tinySpecs-light {
-        background: $light-300;
-        border: 1px solid $dark-900;
-        box-shadow: 1px 2px 5px 2px rgba(9, 9, 9, 0.4);
-      }
-      .active {
-        opacity: 1;
-        display: block;
-      }
-
-      h4 {
-        cursor: pointer;
-      }
-
-      p {
-        margin: 10px;
-      }
-
-      ul {
-        margin: 10px;
-
-        p {
-          margin: 10px;
-        }
-      }
-    }
   }
 }
