--- a/src/assets/Style/Layouts/_ProductShop.scss
+++ b/src/assets/Style/Layouts/_ProductShop.scss
@@ -3,28 +3,31 @@
   flex-wrap: wrap;
   margin: 25px auto;
   width: 90%;
-
+  //Product Card Component
   .product-card-light,
   .product-card-dark {
     flex: 1 0 25%;
     border-radius: 15px;
     padding: 15px;
     margin: 10px;
-
+    //IMG container
     img {
       height: 200px;
       width: 200px;
       border-radius: 15px;
       margin: 10px auto;
     }
+    //Price Margin
     p {
       margin: 10px auto;
     }
   }
+
   .product-card-dark {
     border: solid 1px $light-100;
     box-shadow: 1px 2px 5px 2px rgba(243, 243, 243, 0.4);
   }
+
   .product-card-light {
     border: solid 1px $dark-900;
     box-shadow: 1px 2px 5px 2px rgba(9, 9, 9, 0.4);
