--- a/src/assets/Style/_settings.scss
+++ b/src/assets/Style/_settings.scss
@@ -66,3 +66,10 @@ body {
   position: absolute;
   left: -9999999px;
 }
+.radio {
+  margin: 10px;
+  cursor: pointer;
+}
+.radio-span {
+  margin-left: 5px;
+}
