--- a/src/assets/Style/Components/_Sidebar.scss
+++ b/src/assets/Style/Components/_Sidebar.scss
@@ -14,18 +14,15 @@
   }
 
   .sidebar-nav {
+    //To display Nav on the side
     ul {
       height: 350px;
       @include justify(space-evenly);
       flex-direction: column;
-
-      input[type="radio"] {
-        margin: 10px;
-        cursor: pointer;
-      }
     }
   }
 }
+//Dark Mode
 .sidebar-dark {
   background: $dark-blue;
   border-top: 1px solid $light-100;
@@ -33,6 +30,7 @@
   border-bottom: 1px solid $light-100;
   box-shadow: 1px 2px 5px 2px rgba(243, 243, 243, 0.4);
 }
+//Light Mode
 .sidebar-light {
   background: $light-blue;
   border-top: 1px solid $dark-900;
