--- a/src/assets/Style/Components/_cartRow.scss
+++ b/src/assets/Style/Components/_cartRow.scss
@@ -28,11 +28,12 @@
     }
   }
 }
-
+//Dark Mode
 .cartRow-dark {
   border: 1px solid $light-100;
   box-shadow: 1px 2px 5px 2px rgba(243, 243, 243, 0.4);
 }
+//Light Mode
 .cartRow-light {
   border: 1px solid $dark-900;
   box-shadow: 1px 2px 5px 2px rgba(9, 9, 9, 0.4);
