done style and organizing

--- a/src/assets/Style/index.scss
+++ b/src/assets/Style/index.scss
@@ -1,17 +1,19 @@
 @import "./settings";
-@import "./Layouts/Header";
-@import "./Layouts/ProductShop";
-@import "./Layouts/ProductDisplay";
-@import "./Layouts/ShoppingCart";
 @import "./Layouts/Footer";
-@import "./Components/Hambuger-Menu";
-@import "./Components/Navigation";
-@import "./Components/Sidebar";
+@import "./Layouts/Header";
+@import "./Layouts/productDetails";
+@import "./Layouts/ProductDisplay";
+@import "./Layouts/ProductShop";
+@import "./Layouts/ShoppingCart";
 @import "./Components/btn";
-@import "./Components/span";
-@import "./Components/logo";
-@import "./Components/input";
-@import "./Components/select";
 @import "./Components/cartRow";
+@import "./Components/detailedImg";
+@import "./Components/Hambuger-Menu";
+@import "./Components/input";
+@import "./Components/logo";
+@import "./Components/Navigation";
+@import "./Components/select";
+@import "./Components/Sidebar";
+@import "./Components/span";
+@import "./Components/tinySpecs";
 @import "./Components/topBtn";
-@import "./Components/productDetails";
