--- a/src/assets/Style/Layouts/_ShoppingCart.scss
+++ b/src/assets/Style/Layouts/_ShoppingCart.scss
@@ -7,6 +7,11 @@
     height: 150px;
     width: 150px;
     border-radius: 15px;
+
+    @media screen and (max-width: 700px) {
+      height: 100%;
+      width: 20%;
+    }
   }
   //Total Price Margin
   p {
