finished project hopefully

--- a/src/assets/Style/_settings.scss
+++ b/src/assets/Style/_settings.scss
@@ -67,10 +67,10 @@ body {
   left: -9999999px;
 }
 //Checkbox and Radio Style
-.radio {
+.check {
   margin: 10px;
   cursor: pointer;
 }
-.radio-span {
+.radio {
   margin-left: 5px;
 }
